# go-ast-tokenizer

./: .env  .gitignore  Makefile  README.md  config.yaml  pyproject.toml
notebooks/: 1.0-explore-dataset.ipynb  2.0-evaluate-model.ipynb  3.0-prepare-figures.ipynb
reports/: README.md  abl_a.csv  abl_b.csv  exp1_a.csv  exp1_b.csv  exp2_a.csv  exp2_b.csv  exp3_a.csv  exp3_b.csv  label_cardinality.csv  label_cooccurrence.csv
src/go_ast_tokenizer/: __init__.py  config.yaml  data_loader.py  dataset.py  dataset_builder.py  dataset_card.py  go_style_checker.py  main.py  model.py  tokenizer.py  train.py  utils.py
src/go_ast_tokenizer/checker/: checker.go  checker_test.go  export.go  go.mod  go.sum
src/go_ast_tokenizer/checker/testdata/: captLocal.txt  commentFormatting.txt
src/go_ast_tokenizer/tokenizer/: export.go  go.mod  tokenizer.go  tokenizer_test.go
src/go_ast_tokenizer/tokenizer/testdata/: binary_expression.go  comment.go  identifier.go  integer_literal.go  parentheses.go  simple_assignment.go  string_literal.go
tests/: test_dataset.py  test_tokenizer.py
