[project]
name = "go-ast-tokenizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andrii Holovko", email = "andriy.holovko@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "torch>=2.5.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
