[project]
name = "go-ast-tokenizer"
version = "0.1.0"
description = "Syntax-Aware Tokenizer for Go Code Style Analysis"
readme = "README.md"
authors = [
    { name = "Andrii Holovko", email = "andriy.holovko@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.5.0",
    "huggingface-hub>=0.30.2",
    "iterative-stratification>=0.1.9",
    "jsonargparse[signatures]>=4.38.0",
    "lightning>=2.5.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "peft>=0.15.1",
    "scikit-learn>=1.6.1",
    "smart-open[s3]>=7.1.0",
    "torch>=2.5.0",
    "torchmetrics>=1.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.51.1",
    "wandb>=0.19.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pyright>=1.1.399",
    "pytest>=8.3.5",
    "ruff>=0.11.4",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = []
per-file-ignores = {"__init__.py" = ["F401"]}  # Ignore unused imports in __init__.py files

[tool.ruff.lint.isort]
known-first-party = ["go_ast_tokenizer"]

[tool.pyright]
exclude = [".venv", ".git", "__pycache__", "build", "dist"]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false
